2010-03-03  Noel O'Boyle

	* src/formats/mdlformat.cpp, src/stereo/perception.cpp, 
	include/openbabel/stereo/stereo.h, src/formats/inchiformat.cpp: More
	work on 2D stereo. Tests to follow.

2010-03-03  Tim Vandermeersch

        * include/openbabel/stereo/cistrans.h: Doc update.
        
        * include/openbabel/stereo/squareplanar.h: Update OBSquarePlanarStereo 
        class to work with Config struct like tetrahedral and cis/trans stereo
        objects.

        * src/stereo/squareplanar.cpp: implementation...

        * test/CMakeLists.txt: small changes to the way add_test is used to work 
        with CMake 2.6.

        * test/squareplanartest.cpp: Update the unit test for the OBSquarePlanar 
        class to use Config structs.

2010-03-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/CMakeLists.txt: Add back test for inchwrite and check
	failures on Python tests better.

2010-03-03  Tim Vandermeersch

        * include/openbabel/stereo/tetrahedral.h,
	src/stereo/tetrahedral.cpp: When comparing Config structs'
	stereochemistry, return true if either of the Config structs are
	unspecified (i.e. accidental). The smiles test was failing because
	it compared stereocenters that were unspecified. The documentation
	is also updated.

        * test/smilestest.cpp: Add the test case back. Now passes.

        * test/graphsymtest.cpp: There are still some cases were this test
	fails. However, it mainly has to do with N atoms becoming aromatic
	and getting an extra H atom. I'm not sure what's the best solution
	here...

2010-03-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/kekulize.cpp (expand_kekulize): Fix crashing bug -- looking
	for GetBond, not GetBondById -- the code iterates by bond indexes,
	not unique ids (which may have gaps, etc.). Fixes PR#2956135.

2010-03-01  Tim Vandermeersch

        * tests/smilestest.cpp: Remove the 2 failing test cases for now. I 